<resources>
    <string name="app_name">GastosPersonales</string>
    <string name="app_title_r">Listado de Recordatorios</string>
    <string name="recordatorio_cr">Crear Recordatorio</string>
    <string name="nombre_r">Nombre del Recordatorio</string>
    <string name="frecuencia_r">Frecuencia</string>
    <string name="fecha_r">Fecha</string>
    <string name="hora_r">Hora</string>
    <string name="btn_guardar_r">Guardar</string>
    <string name="btn_agregar_r">Agregar</string>
    <string name="bar_recordatorio">Listado de Recordatorio</string>
    <string name="app_title_cr">Crear de Recordatorios</string>
    <string name="nombre_recordatorio">Nombre Recordatorio:</string>
    <string name="digite_nombre">Digite el Nombre</string>
    <string name="frecuencia_cr">Frecuencia Recordatorio:</string>
    <string name="digite_frecuencia">Seleccione la Frecuencia</string>
    <string name="fecha_cr">Fecha Recordatorio:</string>
    <string name="digite_fecha">Selecione la Fecha</string>
    <string name="hora_cr">Hora Recordatorio:</string>
    <string name="digite_hora">Digite la hora</string>
    <string name="btn_guardar_cr">Guardar</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="monto_re">Monto:</string>
    <string name="digite_monto">Digite el monto</string>
</resources>